native/core/include/gpu/gpu_hot_runtime.h

// ============================================================================
// Forward Declarations
// ============================================================================

struct GPUHotRuntime;
typedef struct GPUHotRuntime GPUHotRuntime;
struct PTXTLSFAllocator;
typedef struct PTXTLSFAllocator PTXTLSFAllocator;
// ============================================================================
// VMM Page Table Entry
// ============================================================================

typedef struct VMMPageEntry {
    void* gpu_addr;             // Current GPU address (may change after swap-in)
    void* original_addr;        // Original address returned to user (for lookup)
    void* host_addr;            // Host backing store (if swapped)
    size_t size;                // Page size
    uint32_t flags;             // Page flags
    uint64_t last_access;       // For LRU eviction
    uint32_t access_count;      // Access frequency
    bool resident;              // In GPU memory
    bool dirty;                 // Modified since last swap
    bool pinned;                // Cannot be evicted
} VMMPageEntry;
// ============================================================================
// VMM State
// ============================================================================

typedef struct VMMState {
    GPUHotRuntime* runtime;   // Owning runtime for allocations
    VMMPageEntry pages[VMM_MAX_PAGES];
    uint32_t num_pages;
    uint32_t resident_pages;
    uint32_t swapped_pages;

    // Swap regions (host memory backing store)
    void* swap_regions[VMM_MAX_SWAP_REGIONS];
    size_t swap_region_sizes[VMM_MAX_SWAP_REGIONS];
    uint32_t num_swap_regions;
    size_t total_swap_size;
    size_t used_swap_size;

    // Statistics
    uint64_t page_faults;
    uint64_t swap_ins;
    uint64_t swap_outs;
    uint64_t evictions;
} VMMState;
typedef struct VFSInode {
    uint32_t inode_id;
    char name[GPU_HOT_MAX_NAME_LEN];
    char path[VFS_MAX_PATH_LEN];
    VFSNodeType type;

    // Data pointer (GPU memory for tensors)
    void* data;
    size_t size;

    // Tensor metadata (if type == VFS_NODE_TENSOR)
    int dims;
    int shape[8];
    int dtype;  // 0=f32, 1=f16, 2=i32, 3=i8

    // Tree structure
    struct VFSInode* parent;
    struct VFSInode* first_child;
    struct VFSInode* next_sibling;

    // Timestamps
    uint64_t created_at;
    uint64_t modified_at;
    uint64_t accessed_at;

    // Permissions
    uint32_t mode;
    uint32_t uid;
    uint32_t gid;

    bool active;
} VFSInode;
// ============================================================================
// VFS Open File Handle
// ============================================================================

typedef struct VFSFileHandle {
    uint32_t fd;
    VFSInode* inode;
    size_t offset;
    uint32_t flags;
    bool is_open;
} VFSFileHandle;
// ============================================================================
// VFS State
// ============================================================================

typedef struct VFSState {
    GPUHotRuntime* runtime;   // Owning runtime for allocations
    VFSInode inodes[VFS_MAX_NODES];
    uint32_t num_inodes;
    VFSInode* root;

    VFSFileHandle open_files[VFS_MAX_OPEN_FILES];
    uint32_t num_open_files;
    uint32_t next_fd;

    // Statistics
    uint64_t reads;
    uint64_t writes;
    uint64_t opens;
    uint64_t closes;
} VFSState;
// ============================================================================
// Runtime Statistics
// ============================================================================

typedef struct GPUHotStats {
    size_t vram_allocated;
    size_t vram_used;
    size_t vram_free;
    float gpu_utilization;      // SM utilization (%)
    float mem_utilization;      // Memory controller utilization (%)
    uint32_t sm_clock_mhz;      // Current SM clock
    uint32_t mem_clock_mhz;     // Current memory clock
    float power_w;              // Instant power draw
    int32_t temperature_c;      // GPU temperature
    bool nvml_valid;            // True when NVML hardware poll succeeded
    float hw_ops_per_sec;       // CUPTI counter rate (operations/sec)
    float gflops_total;         // True counter-based GFLOPS when CUPTI is active
    bool cupti_valid;           // True when CUPTI counters are active
    int active_streams;         // Count of streams with pending GPU work
    int stream_poll_count;      // How many streams were polled (min(num_streams, 1024))
    uint8_t stream_busy[128];   // Bitmask — bit i set = stream i has pending work (up to 1024)
    int registered_kernels;
    int shm_count;
    uint64_t total_ops;
    float avg_latency_us;
    bool watchdog_tripped;
} GPUHotStats;
// ============================================================================
// TLSF Pool Statistics
// ============================================================================

typedef struct TLSFPoolStats {
    size_t total_pool_size;
    size_t allocated_bytes;
    size_t free_bytes;
    size_t peak_allocated;
    size_t largest_free_block;
    size_t smallest_free_block;

    uint32_t total_blocks;
    uint32_t free_blocks;
    uint32_t allocated_blocks;

    uint32_t fallback_count;
    float utilization_percent;
    float fragmentation_ratio;
    float external_fragmentation;

    uint32_t free_list_counts[34];  // Must match TLSF_FL_INDEX_MAX

    // Hash table stats
    uint32_t hash_collisions;
    uint32_t max_chain_length;
    float avg_chain_length;

    // Operation counts
    uint64_t total_allocations;
    uint64_t total_frees;
    uint32_t total_splits;
    uint32_t total_merges;

    bool is_healthy;
    bool needs_defrag;
} TLSFPoolStats;
// ============================================================================
// TLSF Health Report
// ============================================================================

typedef struct TLSFHealthReport {
    bool is_valid;
    bool has_memory_leaks;
    bool has_corrupted_blocks;
    bool has_broken_chains;
    bool has_hash_errors;
    int error_count;
    char error_messages[16][256];
} TLSFHealthReport;
// ============================================================================
// System Snapshot (for debugging)
// ============================================================================

typedef struct GPUHotSystemSnapshot {
    uint64_t total_ops;
    int active_processes;
    int active_tasks;
    int max_priority_active;
    size_t total_vram_used;
    bool watchdog_alert;
    bool kernel_running;
    bool shutdown_requested;
    int active_priority_level;
    uint64_t signal_mask;
    uint32_t interrupt_cnt;
    uint32_t queue_head;
    uint32_t queue_tail;
    uint32_t queue_lock;
} GPUHotSystemSnapshot;
// ============================================================================
// Runtime Configuration
// ============================================================================

typedef struct GPUHotConfig {
    // Pool sizing options (choose one method)
    float pool_fraction;        // Fraction of available VRAM to use (0.0-1.0)
                                // Set to 0 to use fixed_pool_size instead

    size_t fixed_pool_size;     // Fixed pool size in bytes (used if pool_fraction == 0)
                                // Set to 0 for auto-sizing with pool_fraction

    size_t min_pool_size;       // Minimum pool size in bytes (default: 256MB)
    size_t max_pool_size;       // Maximum pool size in bytes (0 = no limit)

    // Safety margins
    size_t reserve_vram;        // VRAM to reserve for CUDA runtime (default: 256MB)

    // Allocator options
    bool enable_leak_detection; // Enable memory leak detection (default: true)
    bool enable_pool_health;    // Enable pool health monitoring (default: true)
    float warning_threshold;    // Utilization % to trigger warnings (default: 0.9)

    // Behavior flags
    bool force_daemon_mode;     // Force daemon mode even if not first process
    bool quiet_init;            // Suppress initialization messages

    // Stream configuration
    unsigned int max_streams;   // Maximum number of CUDA streams (default: 16, max: GPU_HOT_MAX_STREAMS)

    // Single-pool strict mode: deny competing pool init from child processes
    bool single_pool_strict;    // If true, refuse pool init when PTX_DAEMON_CLIENT=1
} GPUHotConfig;
// Get default configuration
GPUHotConfig gpu_hot_default_config(void);
// ============================================================================
// Core Runtime API
// ============================================================================

GPUHotRuntime* gpu_hot_init(int device_id, const char* token);
GPUHotRuntime* gpu_hot_init_with_config(int device_id, const char* token, const GPUHotConfig* config);
void gpu_hot_shutdown(GPUHotRuntime* runtime);
void gpu_hot_keepalive(GPUHotRuntime* runtime);
// ============================================================================
// Memory Allocation API
// ============================================================================

void* gpu_hot_alloc(GPUHotRuntime* runtime, size_t size);
void gpu_hot_free(GPUHotRuntime* runtime, void* ptr);
bool gpu_hot_can_allocate(GPUHotRuntime* runtime, size_t size);
size_t gpu_hot_get_max_allocatable(GPUHotRuntime* runtime);
bool gpu_hot_owns_ptr(GPUHotRuntime* runtime, void* ptr);
// ============================================================================
// CUDA Allocation Hook API (intercepts cuMemAlloc/cudaMalloc)
// ============================================================================

// Initialize hooks - call after gpu_hot_init to enable TLSF for ALL CUDA allocations
void ptx_hook_init(GPUHotRuntime* runtime, bool verbose);
// Disable hooks (for cleanup)
void ptx_hook_disable(void);
// ============================================================================
// CUDA Graph API
// ============================================================================

int gpu_hot_begin_capture(GPUHotRuntime* runtime, int stream_id, const char* graph_name);
int gpu_hot_end_capture(GPUHotRuntime* runtime, int stream_id);
void gpu_hot_launch_graph(GPUHotRuntime* runtime, int graph_id, cudaStream_t stream);
void gpu_hot_destroy_graph(GPUHotRuntime* runtime, int graph_id);
// ============================================================================
// Stream API
// ============================================================================

cudaStream_t gpu_hot_get_stream(GPUHotRuntime* runtime, int stream_id);
cudaStream_t gpu_hot_get_priority_stream(GPUHotRuntime* runtime, int priority);
void gpu_hot_sync_all(GPUHotRuntime* runtime);
// ============================================================================
// Statistics API
// ============================================================================

void gpu_hot_get_stats(GPUHotRuntime* runtime, GPUHotStats* stats);
void gpu_hot_get_tlsf_stats(GPUHotRuntime* runtime, TLSFPoolStats* stats);
void gpu_hot_validate_tlsf_pool(GPUHotRuntime* runtime, TLSFHealthReport* report);
void gpu_hot_print_pool_map(GPUHotRuntime* runtime);
// ============================================================================
// TLSF Pool Management
// ============================================================================

void gpu_hot_defragment_pool(GPUHotRuntime* runtime);
void gpu_hot_set_warning_threshold(GPUHotRuntime* runtime, float threshold_percent);
void gpu_hot_set_auto_defrag(GPUHotRuntime* runtime, bool enable);
// ============================================================================
// Shared Memory / IPC API
// ============================================================================

void* gpu_hot_shm_alloc(GPUHotRuntime* runtime, const char* name, size_t size);
void* gpu_hot_shm_open(GPUHotRuntime* runtime, const char* name);
void gpu_hot_shm_close(GPUHotRuntime* runtime, void* ptr);
void gpu_hot_shm_unlink(GPUHotRuntime* runtime, const char* name);
// ============================================================================
// Watchdog API
// ============================================================================

void gpu_hot_set_watchdog(GPUHotRuntime* runtime, int timeout_ms);
bool gpu_hot_check_watchdog(GPUHotRuntime* runtime);
void gpu_hot_reset_watchdog(GPUHotRuntime* runtime);
void gpu_hot_reset_system_state(GPUHotRuntime* runtime);
void gpu_hot_flush_task_queue(GPUHotRuntime* runtime);
void gpu_hot_clear_signal_mask(GPUHotRuntime* runtime);
void gpu_hot_get_system_snapshot(GPUHotRuntime* runtime, GPUHotSystemSnapshot* snapshot);
// ============================================================================
// PTX-OS Kernel Boot
// ============================================================================

void ptx_os_boot_persistent_kernel(GPUHotRuntime* runtime);